--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ExoMediaSources</string>
+    <string name="text_extractor">Extractor Media Source</string>
+    <string name="text_clipping">Clipping Media Source</string>
+    <string name="text_concatenating">Concatenating Media Source</string>
+    <string name="text_looping">Looping Media Source</string>
+    <string name="text_merging">Merging Media Source</string>
 </resources>
